package com.jobbuddy.backend.model;

public enum JobStatus {
    WAITLISTED,
    APPLIED,
    INTERVIEWED,
    OFFERED,
    REJECTED
}
