package com.jobbuddy.backend.service;

public class JobService {
}
